--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
     <form id="form">
         <label for="min">Min
-            <input type="number" id="min" placeholder="0">
+            <input type="number" id="min" value="0">
         </label>
         <label for="max">Max
-            <input type="number" id="max" placeholder="0">
+            <input type="number" id="max" value="0">
         </label>
         <label for="numbers">Numbers
-            <input type="number" id="numbers" placeholder="0">
+            <input type="number" id="numbers" value="0">
         </label>
         <button type="button" id="addBtn">+</button>
-        <button id="test" type="submit">Test</button>
+        <button type="submit" id="test">Test</button>
     </form>
     <div id="showingDiv">
 
